@@ -975,7 +975,8 @@ class="br0">}</span>                         <span class="co1">// 13</span>
         <li>IMAGES_GALLERY, GALERIA_IMAGENES (<a class="wiki_link" href="#Model-Properties-IMAGES_GALLERY%20stereotype">setup
             instructions</a>) (since v6.6 you can use <i>@Files</i> as
           alternative)</li>
-        <li>ZEROS_FILLED, RELLENADO_CON_CEROS</li>
+        <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/ZerosFilled.html">@ZerosFilled</a>
+            (new in v7.1), </i>ZEROS_FILLED, RELLENADO_CON_CEROS</li>
         <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/HtmlText.html">@HtmlText</a>
             (new in v6.6), </i>HTML_TEXT, TEXTO_HTML (text with editable
           format)</li>
