@@ -987,7 +987,8 @@ class="br0">}</span>                    <span class="co1">// 13</span></pre>
           DATETIME</li>
         <li>GALERIA_IMAGENES, IMAGES_GALLERY (<a class="wiki_link" href="#Modelo-Propiedades-Estereotipo%20GALERIA_IMAGENES">instrucciones</a>)
           (a partir de v6.6 puedes usar <i>@File</i>s como alternativa)</li>
-        <li>RELLENADO_CON_CEROS, ZEROS_FILLED</li>
+        <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/ZerosFilled.html">@ZerosFilled</a>
+            (nuevo en v7.1), </i>RELLENADO_CON_CEROS, ZEROS_FILLED</li>
         <li><i><a href="https://openxava.org/OpenXavaDoc/apidocs/org/openxava/annotations/HtmlText.html">@HtmlText</a>
             (</i><i><i></i><i><i>nuevo en </i></i>v6.6), </i>TEXTO_HTML,
           HTML_TEXT (texto con formato editable)</li>
